--- a/deados/templates/pregunta_teoria.html
+++ b/deados/templates/pregunta_teoria.html
@@ -6,7 +6,7 @@ Perfil de usuario
 <form method="POST" action=".">
 	{% csrf_token %}
 	tipo de pregunta
-	<select name="categoria">
+	<select name="tipoRespuesta">
 		<option value="unica_respuesta">Multiples Opciones, única respuesta</option>
 		<option value="multiple_repuesta">Multiples Opciones, múltiples respuestas</option>
 		<option value="booleana">verdadero ó falso</option>
