permite editar preguntas con las respuestas asociadas

--- a/deados/templates/bug_contrasenas.html
+++ b/deados/templates/bug_contrasenas.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Registro Satisfactorio{% endblock title %}
+{% block title %}Contraseñas no coinciden{% endblock title %}
 {% block contenido %}
 <h2>las contraseñas no coinciden</h2>
 <a href="/" class="btn btn-primary">Volver</a>
