--- a/deados/templates/base.html
+++ b/deados/templates/base.html
@@ -7,23 +7,49 @@
 	<meta name="description" content="Plataforma académica, búsqueda de parciales, ayuda didáctica.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="/media/css/style.css" />
+	<link rel="stylesheet" href="/media/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="/media/bootstrap/css/bootstrap-responsive.css">
+	<script src="/media/js/jquery.js"></script>
+	<script src="/media/bootstrap/js/bootstrap.js"></script>
+	<script type="text/javascript">
+		$(document).on('ready',function(){
+			$.ajax({
+				type:"GET",
+				contentType:"application/json; charset=utf-8",
+				dateType:"json",
+				url:"/ws/preguntas/",
+				success:function(response){
+					consola.log(response);
+					}
+				}
+			});
+		});
+	</script>
 	{% block css 	 %}		{% endblock css 	%}
 	{% block scripts %} 	{% endblock scripts %}
 </head>
 <body>
-	<header class="header">
-		<nav>
-			<li><a href="/home">Inicio</a></li>
-			{% if user.is_authenticated %}
-			<li><a href="/logout">Cerrar Sesion</a></li>
-			{% endif %}
-		</nav>
-	</header>
-	<section id="contenido">
-	{% block contenido %}
-	{% endblock contenido %}
-	</section>
-	<footer class="footer">
-	</footer>
+	<div id="contenedor">
+		<header class="header">
+			<nav>
+				<ul>
+					{% if user.is_authenticated %}
+						<li><a href="/home">Inicio</a></li>
+						<li><a href="/preguntas/teoricas/">Preguntas Teoricas</a></li>
+						<li><a href="#">Preguntas Agilidad Mental</a></li>
+						<li><a href="/logout">Cerrar Sesion</a></li>
+					{% else %}
+						<h1>Bienvenido a la aplicacion DeA2</h1>
+					{% endif %}
+				</ul>
+			</nav>
+		</header>
+		{% block contenido %}
+		{% endblock contenido %}
+		</div>
+
+		<footer class="footer">
+		</footer>
+	</div>
 </body>
 </html>
