--- a/deados/templates/pregunta_secuencial.html
+++ b/deados/templates/pregunta_secuencial.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 {% block titulo %}
-Agregar Pregunta Con Respuesta Múltiple
+Agregar Pregunta de Tipo Secuencial
 {% endblock titulo %}
 {% block contenido %}
 <form method="POST" action=".">
 	{% csrf_token %}
 	Seleccione el Grado de la pregunta:
 	<br>
+	<br><br>
 	<select name="grado" value="grado">
 		<option value="1">Primaria</option>
 		<option value="2">Sexto y Séptimo</option>
 		<option value="3">Octavo y Noveno</option>
 	</select>
 	<br>
-	Ingrese la pregunta: <br>
+	Ingrese la pregunta:
+	<br>
 	<input name="pregunta" type="text" required />
 	<br>
-	ingrese las respuestas: <br>
+	<p>Ingresa las Respuestas: </p>
 	<p>respuesta1:</p>
 	<input type="text" name="respuesta1" required />
 	<p>respuesta2:</p>
@@ -25,12 +27,16 @@ Agregar Pregunta Con Respuesta Múltiple
 	<input type="text" name="respuesta3" required />
 	<p>respuesta4:</p>
 	<input type="text" name="respuesta4" required />
+	<p>Elige la Secuencia Correcta de las respuestas:</p>
+	<p>Secuencia 1: </p>
+	<input type="text" name="secuencia1" required />
+	<p>Secuencia 2: </p>
+	<input type="text" name="secuencia2" required />
+	<p>Secuencia 3: </p>
+	<input type="text" name="secuencia3" required />
+	<p>Secuencia 4: </p>
+	<input type="text" name="secuencia4" required />
 	<br>
-	Elige las Respuestas Correctas: <br>
-	<input type="checkbox" name="multiple1" value="1" checked />
-	<input type="checkbox" name="multiple2" value="2">
-	<input type="checkbox" name="multiple3" value="3">
-	<input type="checkbox" name="multiple4" value="4">
-	<input type="submit" value="Guardar">
+	<input type="submit" value="Ingresar Respuestas">
 </form>
 {% endblock contenido %}
