--- a/deados/templates/pregunta_teoria.html
+++ b/deados/templates/pregunta_teoria.html
@@ -5,14 +5,15 @@ Perfil de usuario
 {% block contenido %}
 <form method="POST" action=".">
 	{% csrf_token %}
-	tipo de pregunta
+	<p>tipo de pregunta: </p>
+	<br><br>
 	<select name="tipoRespuesta">
 		<option value="unica_respuesta">Multiples Opciones, única respuesta</option>
 		<option value="multiple_repuesta">Multiples Opciones, múltiples respuestas</option>
 		<option value="booleana">verdadero ó falso</option>
 		<option value="secuencial">Secuencial</option>
 	</select>
-	categoria de la pregunta 
-	<input type="submit" value="Teoria">
+	<br><br><br>
+	<input type="submit" value="Guardar">
 </form>
 {% endblock contenido %}
