--- a/deados/templates/edit_secuencial_respuesta.html
+++ b/deados/templates/edit_secuencial_respuesta.html
@@ -10,28 +10,41 @@ Editar respuestas tipo Respuesta Secuencial
 	{% csrf_token %}
 	<input type="hidden" name="idpregunta" value="{{pregunta.id}}" required />
 	{% if respuesta1 %}
-		<p>respuesta1:</p>
+		<h4>Editas Las Respuestas:</h4>
+		<h5>respuesta 1:</h5>
 		<input type="hidden" name="id1" value="{{respuesta1.id}}" required />
-		<input type="text" name="respuesta1" value="{{respuesta1.contenido}}" required />
-		<p>respuesta2:</p>
+		<textarea name="respuesta1" onKeyDown="textCounter(this.form.respuesta1,this.form.remLen1,40);" onKeyUp="textCounter(this.form.respuesta1,this.form.remLen1,40);" required />{{respuesta1.contenido}}</textarea>
+		<br>
+		<input readonly class="count" type=text name="remLen1" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
+		<h5>respuesta 2:</h5>
 		<input type="hidden" name="id2" value="{{respuesta2.id}}" required>
-		<input type="text" name="respuesta2" value="{{respuesta2.contenido}}" required />
-		<p>respuesta3:</p>
+		<textarea name="respuesta2" onKeyDown="textCounter(this.form.respuesta2,this.form.remLen2,40);" onKeyUp="textCounter(this.form.respuesta2,this.form.remLen2,40);" required />{{respuesta2.contenido}}</textarea>
+		<br>
+		<input readonly class="count" type=text name="remLen2" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
+		<h5>respuesta 3:</h5>
 		<input type="hidden" name="id3" value="{{respuesta3.id}}" required>
-		<input type="text" name="respuesta3" value="{{respuesta3.contenido}}" required />
-		<p>respuesta4:</p>
+		<textarea name="respuesta3" onKeyDown="textCounter(this.form.respuesta3,this.form.remLen3,40);" onKeyUp="textCounter(this.form.respuesta3,this.form.remLen3,40);" required />{{respuesta3.contenido}}</textarea>
+		<br>
+		<input readonly class="count" type=text name="remLen3" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
+		<h5>respuesta 4:</h5>
 		<input type="hidden" name="id4" value="{{respuesta4.id}}" required>
-		<input type="text" name="respuesta4" value="{{respuesta4.contenido}}" required />
+		<textarea name="respuesta4" onKeyDown="textCounter(this.form.respuesta4,this.form.remLen4,40);" onKeyUp="textCounter(this.form.respuesta4,this.form.remLen4,40);" required />{{respuesta4.contenido}}</textarea>
 		<br>
-		<p>Elige la Secuencia de las respuestas:</p>
-		<input type="text" name="secuencia1" required />
-		<input type="text" name="secuencia2" required />
-		<input type="text" name="secuencia3" required />
-		<input type="text" name="secuencia4" required />
+		<input readonly type=text class="count" name="remLen4" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
 		<br>
-		<input type="submit" value="Guardar">
-	{% else %}
-		<p>no se han registrado respuestas</p>
+		<h4>Elige la Secuencia Correcta de las respuestas:</h4>
+		<h5>Secuencia 1:</h5>
+		<input type="text" id="secuencia1" name="secuencia1" onKeyDown="textCounterSec(this.form.secuencia1,1);" onKeyUp="textCounterSec(this.form.secuencia1,1);" style="width:12px;height:10px;font-size:1em" required />
+		<h5>Secuencia 2:</h5>
+		<input type="text" id="secuencia2" name="secuencia2" onKeyDown="textCounterSec(this.form.secuencia2,1);" onKeyUp="textCounterSec(this.form.secuencia2,1);" style="width:12px;height:10px;font-size:1em" style="width:12px;height:10px;font-size:1em" required />
+		<h5>Secuencia 3:</h5>
+		<input type="text" id="secuencia3" name="secuencia3" onKeyDown="textCounterSec(this.form.secuencia3,1);" onKeyUp="textCounterSec(this.form.secuencia3,1);" style="width:12px;height:10px;font-size:1em" style="width:12px;height:10px;font-size:1em" required />
+		<h5>Secuencia 4:</h5>
+		<input type="text" id="secuencia4" name="secuencia4" onKeyDown="textCounterSec(this.form.secuencia4,1);" onKeyUp="textCounterSec(this.form.secuencia4,1);" style="width:12px;height:10px;font-size:1em" style="width:12px;height:10px;font-size:1em" required />
+		<br>
+			<input type="submit" value="Guardar">
+		{% else %}
+			<p>no se han registrado respuestas</p>
 	{% endif %}
 </form>
 {% endblock contenido %}
