--- a/deados/templates/login.html
+++ b/deados/templates/login.html
@@ -5,7 +5,7 @@ Inicio de Sesion
 {% block contenido %}
 <form method="POST" action=".">
 	{% csrf_token %}
-	Institucion
+	<p>Nombre de la institución:</p>
 	<select name="username">
         {% for i in instituciones %}
         	<option value="{{i}}" name="nombre">{{i}}</option>
@@ -13,7 +13,9 @@ Inicio de Sesion
     </select>
     <br>
 	<input type="password" name="password" required />
+	<br><br>
 	<input type="submit" value="ingresar">
 </form>
-<h5>Registrate <a href="/register_institucion">aquí</a></h5>
+<br><br><br>
+<h5>si tu institucion aún no tiene cuenta Registrate <a href="/register_institucion">aquí</a></h5>
 {% endblock contenido %}
