--- a/deados/templates/preguntas_teoricas.html
+++ b/deados/templates/preguntas_teoricas.html
@@ -3,21 +3,30 @@
 Preguntas de usario
 {% endblock titulo %}
 {% block contenido %}
-<div class="contenido">
 	<h3>Preguntas de {{usuario.username}}</h3>
 	{% if preguntas_teoricas %}
 		<table  class="table table-hover">
 			<thead>
 				<tr>
 					<td><h3>Pregunta</h3></td>
+					<td><h3>Tipo de Pregunta</h3></td>
 				</tr>
 			</thead>
 			{% for pt in preguntas_teoricas %}
 				<tbody>
 					<tr>
 						<td>{{pt.contenido}}</td>
+						{% if pt.tipoRespuesta == 1%}
+							<td>Unica Respuesta</td>
+						{% elif pt.tipoRespuesta == 2%}
+							<td>Múltiple Respuesta</td>
+						{% elif pt.tipoRespuesta == 3%}
+							<td>Verdadero o Falso</td>
+						{% elif pt.tipoRespuesta == 4%}
+							<td>Secuencial</td>
+						{% endif %}
 						<td><a class="btn" href="/edit/pregunta/teorica/{{pt.id}}"><li class="icon-pencil"></li>Editar</a></td>
-						<td><a class="btn" href="#"><li class="icon-remove"></li>Eliminar</a></td>
+						<td><a class="btn" href="/delete/pregunta/teorica/{{pt.id}}" onClick="return confirm('se eliminaran todos los datos asociados a la pregunta. Desea Continuar?');"><li class="icon-remove"></li>Eliminar</a></td>
 					</tr>
 				</tbody>
 			{% endfor %}
@@ -25,5 +34,4 @@ Preguntas de usario
 	{% else %}
 		<h2>aún no has registrado preguntas</h2>
 	{% endif %}
-</div>
 {% endblock contenido %}
